@@ -49,6 +49,7 @@ next version - not released yet
 ! ISR/VSFilter: Use correct colorimetry information for PGS and DVB subtitles
 ! ISR: Subtitles could be partially rendered when using no subtitle queue
 ! ISR: Text subtitles were incorrectly displayed after switching from PGS/DVB subtitles
+! PGS subtitles: Subtitles displayed just after seeking could be wrong
 ! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
 ! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
 ! Ticket #2994, Fix toolbar separators not being properly painted
